# ChangeLog for games-misc/fortune-mod-gentoo-dev upstream sources
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/fortune-gentoo-dev/ChangeLog,v 1.3 2007/04/28 22:59:00 robbat2 Exp $

  28 Apr 2007; Robin H. Johnson <robbat2@gentoo.org>
  +fortunes/00417-20061121_00001, +fortunes/00418-20061121_00002,
  +fortunes/00419-20061121_00003, +fortunes/00420-20061129_00001,
  +fortunes/00421-20061206_00001, +fortunes/00422-20061216_00001,
  +fortunes-offensive/00423-20070119_00001, +fortunes/00424-20070125_00001,
  +fortunes/00425-20070131_00001, +fortunes/00426-20070223_00001,
  +fortunes/00427-20070313_00001, +fortunes/00428-20070313_00002,
  +fortunes/00429-20070425_00001:
  Add all fortunes collected up to 25 April 2007.

  28 Apr 2007; Robin H. Johnson <robbat2@gentoo.org>
  fortunes/00003-20030809_00003, fortunes/00008-20030809_00008,
  fortunes/00097-20031122_00090:
  Fix whitespace.

*fortune-mod-gentoo-dev-20070428 (28 Apr 2007)
  28 Apr 2007; Robin H. Johnson <robbat2@gentoo.org>
  +fortunes/00000-20030809_00000, +fortunes/00003-20030809_00003,
  +fortunes/00004-20030809_00004, +fortunes/00005-20030809_00005,
  +fortunes/00006-20030809_00006, +fortunes/00007-20030809_00007,
  +fortunes/00008-20030809_00008, +fortunes/00009-20030809_00009,
  +fortunes/00011-20030809_00011, +fortunes/00013-20030809_00013,
  +fortunes/00014-20030809_00014, +fortunes/00015-20030809_00015,
  +fortunes/00016-20030809_00016, +fortunes-offensive/00017-20030809_00017,
  +fortunes/00018-20030809_00018, +fortunes/00019-20030809_00019,
  +fortunes/00020-20030809_00020, +fortunes/00021-20030809_00021,
  +fortunes/00022-20030809_00022, +fortunes/00023-20030809_00023,
  +fortunes/00024-20030809_00024, +fortunes/00025-20030809_00025,
  +fortunes-offensive/00026-20030809_00026, +fortunes/00027-20030809_00027,
  +fortunes/00028-20030809_00028, +fortunes/00029-20030809_00029,
  +fortunes/00030-20030809_00030, +fortunes/00031-20030809_00031,