@@ -1,15 +1,15 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/fortune-gentoo-dev/Makefile,v 1.1 2007/04/28 22:43:14 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo/src/fortune-gentoo-dev/Makefile,v 1.2 2007/04/28 23:18:12 robbat2 Exp $
 
 # These are specific to Gentoo.
 # If you are elsewhere, you might want to change them.
-ROT13 ?= /usr/games/bin/rot13
 STRFILE ?= /usr/bin/strfile
 PERL ?= /usr/bin/perl
 RM ?= /bin/rm
 INSTALL ?= /usr/bin/install -c
 INSTALL_DIR ?= $(INSTALL) -d
+ROT13 ?= $(PERL) rot13.pl
 FORTUNE_DIR ?= /usr/share/fortune
 FORTUNE_OFF_DIR ?= $(FORTUNE_DIR)/off
 
