@@ -1,6 +1,9 @@
 # ChangeLog for games-misc/fortune-mod-gentoo-dev upstream sources
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/fortune-gentoo-dev/ChangeLog,v 1.3 2007/04/28 22:59:00 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo/src/fortune-gentoo-dev/ChangeLog,v 1.4 2007/04/28 23:18:12 robbat2 Exp $
+
+  28 Apr 2007; Robin H. Johnson <robbat2@gentoo.org> Makefile, +rot13.pl:
+  Add rot13 implementation to avoid external binary.
 
   28 Apr 2007; Robin H. Johnson <robbat2@gentoo.org>
   +fortunes/00417-20061121_00001, +fortunes/00418-20061121_00002,
